--- a/package.json
+++ b/package.json
@@ -19,14 +19,7 @@
     "sw-precache-webpack-plugin": "^0.11.4"
   },
   "devDependencies": {
-    "avet-bin": "0.2.0",
-    "babel": "^6.3.26",
-    "babel-runtime": "^6.11.6",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-airbnb": "^1.0.1",
-    "babel-register": "^6.4.3"
+    "avet-bin": "^0.2.0"
   },
   "author": "okoala <dapixp@gmail.com>",
   "engines": {
