--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avet-pwa",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "avet pwa",
   "avetPlugin": {
     "name": "pwa"
@@ -14,10 +14,10 @@
     "sw-precache-webpack-plugin": "^0.11.4"
   },
   "devDependencies": {
-    "avet-bin": "^0.7.0",
+    "avet-bin": "^0.7.4",
     "babel-eslint": "^8.0.2",
-    "eslint": "^4.10.0",
-    "eslint-config-avet": "^0.3.8",
+    "eslint": "^4.9.0",
+    "eslint-config-avet": "^0.3.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
@@ -28,9 +28,6 @@
   "tnpm": {
     "mode": "npm"
   },
-  "files": ["config", "page", "extend", "dist", "app.js"],
-  "ci": {
-    "version": "8"
-  },
+  "files": ["config", "extend", "output", "app.js"],
   "license": "MIT"
 }
